# turing

./: CHANGELOG.md  LICENSE  turing.cabal
app/: Main.hs
examples/: Examples.hs
internal/: TuringInternal.hs
src/: Turing.hs
test/: Main.hs
